<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_first"
    android:background="@drawable/bg" >

    <ImageView
        android:layout_width="28dp"
        android:layout_height="33dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/strelka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/slide" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/knopka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/slide" />

    <TextView
        android:id="@+id/raiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="11dp"
        android:text="@string/_4_5"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="@drawable/zvezda"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/raiting"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:contentDescription="@string/slide"/>

    <ImageView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="259dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/belyibutton"
        android:contentDescription="@string/slide"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.461"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/main"
        />

    <TextView
        android:id="@+id/whereabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/place"
        android:textSize="12sp"
        android:textColor="@color/light"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/favourites"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginTop="193dp"
        android:background="@drawable/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whereabout"
        android:textColor="@color/main" />

    <TextView
        android:id="@+id/Description"
        android:layout_width="179dp"
        android:layout_height="84dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="3dp"
        android:text="@string/text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/main"/>

    <TextView
        android:id="@+id/characteristics1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/rescued"
        android:textColor="@color/dk"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Description"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/characteristics2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/vegan"
        android:textColor="@color/dk"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/characteristics1"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/clock"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/clock"
        app:layout_constraintStart_toEndOf="@+id/characteristics2"
        app:layout_constraintTop_toBottomOf="@+id/Description" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/time"
        android:textColor="@color/dk"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/clock"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="475dp" />

    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/fire"
        android:layout_width="19dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/fire"
        app:layout_constraintStart_toEndOf="@+id/time2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="475dp" />

    <TextView
        android:id="@+id/calorie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/calorie"
        android:textColor="@color/dk"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/fire"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="479dp" />

    <TextView
        android:id="@+id/nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="167dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/nutritional_value"
        android:textColor="@color/main"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/whereabout" />

    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/line"
        android:layout_width="157dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/liine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/nutrition" />

    <TextView
        android:id="@+id/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:textSize="9sp"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/proteijn"
        android:textColor="@color/nutrition"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/nutrition"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/Carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/carbs"
        android:textColor="@color/nutrition"
        android:textSize="9sp"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/protein"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/Sodium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/sodium"
        android:textColor="@color/nutrition"
        android:textSize="9sp"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/Carbs"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/Potassium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/Potassium"
        android:textColor="@color/nutrition"
        android:textSize="9sp"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/Sodium"
        tools:ignore="SmallSp" />
    <TextView
        android:id="@+id/vitamins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/vitamins"
        android:textColor="@color/nutrition"
        android:textSize="9sp"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/Potassium"
        tools:ignore="SmallSp" />
    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/line1"
        android:layout_width="157dp"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/liine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Description"
        app:layout_constraintTop_toBottomOf="@+id/vitamins" />

    <ImageView
        android:id="@+id/ingredients"
        android:layout_width="350dp"
        android:layout_height="78dp"
        android:background="@drawable/ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="561dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/slide" />

    <ImageView
        android:id="@+id/ris"
        android:layout_width="280dp"
        android:layout_height="38dp"
        android:background="@drawable/ris"
        app:layout_constraintBottom_toBottomOf="@+id/ingredients"
        app:layout_constraintEnd_toEndOf="@+id/ingredients"
        app:layout_constraintStart_toStartOf="@+id/ingredients"
        app:layout_constraintTop_toTopOf="@+id/ingredients"
        app:layout_constraintVertical_bias="0.775"
        android:contentDescription="@string/slide" />

    <ImageView
        android:id="@+id/buttonslider"
        android:layout_width="250dp"
        android:layout_height="34dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/buttonslider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingredients"
        android:contentDescription="@string/slide"/>

    <TextView
        android:id="@+id/selectuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/select_user"
        app:layout_constraintBottom_toBottomOf="@+id/buttonslider"
        app:layout_constraintStart_toStartOf="@+id/buttonslider"
        app:layout_constraintTop_toTopOf="@+id/buttonslider"
        app:layout_constraintVertical_bias="0.533"
        android:fontFamily="@font/poppinslightitalic"
        />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/user_1"
        app:layout_constraintBottom_toBottomOf="@+id/buttonslider"
        app:layout_constraintStart_toEndOf="@+id/selectuser"
        app:layout_constraintTop_toTopOf="@+id/buttonslider" />

    <TextView
        android:id="@+id/addit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppinslightitalic"
        android:text="@string/additions"
        android:textColor="@color/main"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.14"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="730dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/buttonslider2"
        android:layout_width="361dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonslider2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addit"
        android:contentDescription="@string/slide" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="21dp"
        android:text="@string/jala"
        app:layout_constraintBottom_toBottomOf="@+id/buttonslider2"
        app:layout_constraintStart_toStartOf="@+id/buttonslider2"
        app:layout_constraintTop_toTopOf="@+id/buttonslider2"
        app:layout_constraintVertical_bias="0.0"
        android:fontFamily="@font/poppinsregular"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="360dp"
        android:layout_height="74dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/morellesss"
        android:contentDescription="@string/slide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonslider2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/_125"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>