<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_first"
    android:background="@drawable/bg" >

    <ImageView
        android:layout_width="28dp"
        android:layout_height="33dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/strelka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/slide" />

    <ImageView
        android:id="@+id/button"
        android:layout_width="118dp"
        android:layout_height="38dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="33dp"
        android:background="@drawable/knopka"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/slide" />

    <TextView
        android:id="@+id/raiting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="11dp"
        android:text="@string/_4_5"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button"
        app:layout_constraintVertical_bias="0.0"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:background="@drawable/zvezda"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/raiting"
        app:layout_constraintTop_toTopOf="@+id/button"
        android:contentDescription="@string/slide"/>

    <ImageView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="259dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/belyibutton"
        android:contentDescription="@string/slide"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.461"
        android:fontFamily="@font/poppinsbold"
        android:textColor="@color/main"
        />

    <TextView
        android:id="@+id/whereabout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppinsregular"
        android:text="@string/place"
        android:textSize="12sp"
        android:textColor="@color/light"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <ImageView
        android:contentDescription="@string/slide"
        android:id="@+id/favourites"
        android:layout_width="39dp"
        android:layout_height="35dp"
        android:layout_marginTop="193dp"
        android:background="@drawable/favourite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whereabout"
        android:textColor="@color/main" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="360dp"
        android:layout_height="74dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/morellesss"
        android:contentDescription="@string/slide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/_125"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>